# ejabberd_exporter

./: .travis.yml  COPYING  Cargo.toml  README.md
mock/: ejabberdctl
resources/: ejabberd-exporter  ejabberd-exporter.service
src/: main.rs  metrics.rs  scraper.rs
